modification du test

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header><h1>Hello you !</h1></header>
     <main>
         <div class="content">
-            <p>Comme tu le vois, je fais test !</p>
+            <p>Comme tu le vois, je fais un test !</p>
             <img src="assets/img/pexels-this-is-zun-1116302.jpg" alt="Girl friendship">
         </div>
     </main>
